<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:textDirection="rtl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".how_to">


    <LinearLayout
        android:textDirection="rtl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textDirection="rtl"
            android:text="@string/how_to_use"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:layout_height="wrap_content" />

        <ImageView
            android:src="@drawable/loginscreen"
            android:contentDescription="@string/log_in_screen_content_desc"
            style="@style/how_to_image_view"/>

        <TextView
            style="@style/how_to_text_view"
            android:text="@string/log_in_description"/>

        <ImageView
            android:src="@drawable/mainscreen"
            android:contentDescription="@string/main_screen_screen_content_desc"
            style="@style/how_to_image_view" />

        <TextView
            style="@style/how_to_text_view"
            android:text="@string/main_screen_description"/>

        <ImageView
            android:src="@drawable/menu"
            android:contentDescription="@string/menu_pic"
           style="@style/how_to_image_view" />

        <TextView
            style="@style/how_to_text_view"
            android:text="@string/menu_in_description" />

    </LinearLayout>
</ScrollView>
