<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:textDirection="rtl"
    tools:context=".Dream">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/dreamer" />

        <EditText
            android:id="@+id/owner_edit_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="4dp"
            android:elevation="4dp"
            android:background="#fff"
            android:hint="@string/add_your_name"
            android:inputType="text"
            android:enabled="false"
             />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/dream_details" />


        <EditText
            android:id="@+id/dream_edit_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="4dp"
            android:elevation="4dp"
            android:background="#fff"
            android:hint="@string/add_your_dream_details"
            android:inputType="textMultiLine"
            android:enabled="false"
            />

        <TextView
            android:id="@+id/transalation_Label_text_view"
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            android:padding="4dp"
            android:text="التفسير"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/translation_text_view"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:elevation="4dp"
            android:padding="4dp"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:text="لم يتم الرد"/>


        <Button
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorAccent"
            android:text="@string/send"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/edit"
            android:visibility="gone"
            android:textAllCaps="false" />


    </LinearLayout>

</ScrollView>